2009-02-25  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_todo.txt: updated list.
	* varforce_get_force: reduced step size for voltage interpolation.

2008-03-07  Kris Ford <krisford@email.unc.edu>
	* Added .mat files to cvsignore
	* varforce_analysis_gui.m: modified documentation to better match Mathworks convention
	* varforce_compute_inst_force.m: same
	* varforce_compute_linefit_force.m: same
	* varforce_compute_sat_data.m: same
	* varforce_construct_spatial_map.m same
	* varforce_drive.m: same
	* varforce_drive_gui.m: same
	* estimate_varforce_pulse_widths: same
	* varforce_get_force.m: same
	* varforce_handle_degauss.m: same
	* varforce_init.m: same
	* varforce_plot_drift_vectors.m: same
	* varforce_plot_force_distance.m: same
	* varforce_plot_force_power_law.m: same
	* varforce_plot_powerlaw_vs_current.m: same
	* varforce_plot_sat_data.m: same
	* varforce_remove_buffer_points.m: same
	* varforce_remove_drift.m: same
	* varforce_run.m: same

2008-10-27  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added. set to ignore matlab's autosave files (*.asv)
	* varforce_compute_sat_data.m: added comments.

2008-09-25  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_init.m: fixed bug where last sequence was not being used at all.
	* varforce_run.m: same.
	* varforce_todo.m: updated.

2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_run.m: fixed bug where degauss at beginning would return an empty set when trying to estimate remanance.  Now the code checks to see if the degauss location is at the middle or beginning of the zero-voltage region.

2008-05-27  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_compute_linefit_force.m: fixed a bug that assigned a VoltageID as a Voltage.
	* varforce_compute_sat_data.m: cosmetic changes.
	* varforce_plot_force_power_law.m: cosmetic changes.
	* varforce_plot_sat_data.m: cosmetic changes.
	* varforce_run.m: updated comments.
	* varforce_drive.m: fixed typo in documentation.